# easyversion

./: .envrc  Cargo.toml  README.md  build.zig  build.zig.zon  flake.nix  optimize.sh
.direnv/: flake-profile-1-link
benches/: bench.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: ContentId.zig  config.rs  easy_version.rs  easyversion.rs  lib.rs  logging.rs  main.zig  model.rs  operations.rs  patch.rs  patch_timeline.rs  project.rs  root.zig  store.rs  timeline.rs  tracked_bytes.rs  tracked_file.rs  tracked_folder.rs  version.rs  version_info.rs
src/file/: id.rs  mod.rs  storage.rs
src/patches/: mod.rs  patch.rs  patch_timeline.rs
src/project/: mod.rs  version.rs  workspace.rs
src/tracked/: file.rs  folder.rs  mod.rs
src/version_info_manager/: label.rs  mod.rs  version_identifier.rs  version_info.rs
test-data/patch/: 3130703799529806172.ezpatch  5175779158187638420.ezpatch  C.txt
test-data/project/patches/: 9252010078441894118.ezpatch  ezproject.ron
test-data/tracked-bytes/patches/: 2843632088318684388.ezpatch  6508571676381236343.ezpatch  8640918399433326124.ezpatch
test-data/tracked-file/patches/: 168050371823356152.ezpatch
test-data/tracked/file/: 1975934677233333827.ezpatch  3585183874576566023.ezpatch
