[package]
name = "easyversion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[[bench]]
name = "main"
harness = false

[dev-dependencies]
criterion = "0.8.1"

[workspace]
members = ["cli"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
